@@ -8,8 +8,289 @@
 
 <A NAME="__index__"></A>
 <!-- INDEX BEGIN -->
+
+<UL>
+
+	<LI><A HREF="#name">NAME</A></LI>
+	<LI><A HREF="#synopsis">SYNOPSIS</A></LI>
+	<LI><A HREF="#description">DESCRIPTION</A></LI>
+	<LI><A HREF="#methods">METHODS</A></LI>
+	<UL>
+
+		<LI><A HREF="#instantiating a dbix::fetchloop object:">Instantiating a DBIx::FetchLoop object:</A></LI>
+		<LI><A HREF="#retrieving data:">Retrieving data:</A></LI>
+		<LI><A HREF="#conditional testing:">Conditional testing:</A></LI>
+		<LI><A HREF="#data utilities:">Data Utilities:</A></LI>
+	</UL>
+
+	<LI><A HREF="#examples">EXAMPLES</A></LI>
+	<UL>
+
+		<LI><A HREF="#example 1 (fetchrow_hashref):">Example 1 (fetchrow_hashref):</A></LI>
+		<LI><A HREF="#example 2 (fetchrow_arrayref):">Example 2 (fetchrow_arrayref):</A></LI>
+		<LI><A HREF="#example 3 (concatenation, fetchrow_hashref and substring comparison)">Example 3 (concatenation, fetchrow_hashref and substring comparison)</A></LI>
+	</UL>
+
+	<LI><A HREF="#changes">CHANGES</A></LI>
+	<LI><A HREF="#todo">TO-DO</A></LI>
+	<LI><A HREF="#acknowledgements">ACKNOWLEDGEMENTS</A></LI>
+	<LI><A HREF="#author">AUTHOR</A></LI>
+	<LI><A HREF="#copyright">COPYRIGHT</A></LI>
+</UL>
 <!-- INDEX END -->
 
+<HR>
+<P>
+<H1><A NAME="name">NAME</A></H1>
+<P>DBIx::FetchLoop - Fetch with change detection and aggregates</P>
+<P>
+<HR>
+<H1><A NAME="synopsis">SYNOPSIS</A></H1>
+<PRE>
+  use DBIx::FetchLoop;</PRE>
+<PRE>
+  $lph = DBIx::FetchLoop-&gt;new($sth, $dbi_method);</PRE>
+<PRE>
+  $hash_ref = $lph-&gt;fetch_current_data;</PRE>
+<PRE>
+  $lph-&gt;set_aggregate($new_field, $field);
+  $lph-&gt;reset_aggregate($new_field);</PRE>
+<PRE>
+  $lph-&gt;set_concatenate($new_field, $field);
+  $lph-&gt;reset_concatenate($new_field);</PRE>
+<PRE>
+  $boolean = $lph-&gt;pre_loop($field);
+  $boolean = $lph-&gt;post_loop($field);</PRE>
+<PRE>
+  $boolean = $lph-&gt;pre_loop_substr($field,$offset,$length);
+  $boolean = $lph-&gt;post_loop_substr($field,$offset,$length);</PRE>
+<PRE>
+  $boolean = $lph-&gt;is_first;
+  $boolean = $lph-&gt;is_last;</PRE>
+<PRE>
+  $count = $lph-&gt;count;</PRE>
+<P>
+<HR>
+<H1><A NAME="description">DESCRIPTION</A></H1>
+<P>DBIx::FetchLoop is a supplemental approach for data retrieval with DBI. Result rows are queued 
+with hash references to previous, current and next rows.  Utility functions allow for simplified
+comparison of a field between previous and current or current and next rows.  Additional
+functions allow you automatically create new fields for aggregating or concatenating based on 
+fields in the resulting dataset.</P>
+<P>Note:
+This module was created with ease of use and performance in mind.  This module is intended to 
+eliminate the need for temporary variables for loop detection as well as aggregation and concatenation.
+The reason that not all DBI methods for data retrieval are not implemented (such as selectall_arrayref) 
+is that the module's design for performance would be defeated.</P>
+<P>In essence you can write cleaner looking, more efficient code minus a few hassles.</P>
+<P>
+<HR>
+<H1><A NAME="methods">METHODS</A></H1>
+<P>
+<H2><A NAME="instantiating a dbix::fetchloop object:">Instantiating a DBIx::FetchLoop object:</A></H2>
+<P>DBIx::FetchLoop requires two arguements when creating an object: a dbi statement handle, and 
+a scalar identifying the DBI data retrieval method to utilize.  Supported DBI methods are:
+	fetchrow_arrayref
+	fetchrow_hashref</P>
+<P>The module automatically handles calling the $sth-&gt;execute and $sth-&gt;finish functions of DBI,
+therefore you only need to create the statement handle and pass it along.</P>
+<P>Instantiating an object would look like this:</P>
+<PRE>
+  use DBI;
+  use DBIx::FetchLoop;</PRE>
+<PRE>
+  $dbh = DBI-&gt;connect($connect_string);
+  $sth = $dbh-&gt;prepare($sql);
+  $lph = DBIx::FetchLoop-&gt;new($sth,'fetchrow_hashref');</PRE>
+<P>If $dbi_method is not supplied, the module will default to using fetchrow_hashref.</P>
+<P>
+<H2><A NAME="retrieving data:">Retrieving data:</A></H2>
+<PRE>
+  $d = $lph-&gt;fetch_current_data;</PRE>
+<P>$d is a hashref with elements to previous, current and next datasets as available.</P>
+<P>eg (fetchrow_hashref)</P>
+<PRE>
+  $d-&gt;{previous}-&gt;{field} 
+  $d-&gt;{current}-&gt;{field} 
+  $d-&gt;{next}-&gt;{field}</PRE>
+<P>eg (fetchrow_arrayref)</P>
+<PRE>
+  $d-&gt;{previous}-&gt;[1] 
+  $d-&gt;{current}-&gt;[1] 
+  $d-&gt;{next}-&gt;[1]</PRE>
+<P>
+<H2><A NAME="conditional testing:">Conditional testing:</A></H2>
+<P>These functions exist to make the code necessary for detecting a new loop a little cleaner.</P>
+<PRE>
+  $lph-&gt;pre_loop($field);  - compares $field between previous and current rows, returns true if different
+  $lph-&gt;post_loop($field); - compares $field between current and next rows, returns true if different
+</PRE>
+<PRE>
+
+  $lph-&gt;pre_loop_substr($field,$offset,$length);  - compares substring of $field between previous and current rows, returns true if different
+  $lph-&gt;post_loop_substr($field,$offset,$length);- compares substring of $field between current and next rows, returns true if different</PRE>
+<PRE>
+
+  $lph-&gt;is_first; - returns true if current record is first record
+  $lph-&gt;is_last;  - returns true if current record is last record</PRE>
+<P>
+<H2><A NAME="data utilities:">Data Utilities:</A></H2>
+<PRE>
+  $lph-&gt;set_aggregate($new_field, $field);
+  $lph-&gt;set_concatenate($new_field, $field);</PRE>
+<P>These functions allow you to create new fields in the resulting dataset that are aggregates or
+concatenates of an original field in the data set. They must be called before the first time you
+call $lph-&gt;fetch_current_data.</P>
+<PRE>
+  $lph-&gt;reset_aggregate($new_field);
+  $lph-&gt;reset_concatenate($new_field);</PRE>
+<P>These functions reset the value of the specified field to undef in the current dataset.  They can be 
+called anytime during the running of the program.</P>
+<PRE>
+  $lph-&gt;count; - return the number of the current row returned (starts at 1)</PRE>
+<P>
+<HR>
+<H1><A NAME="examples">EXAMPLES</A></H1>
+<P>
+<H2><A NAME="example 1 (fetchrow_hashref):">Example 1 (fetchrow_hashref):</A></H2>
+<PRE>
+  use DBI;
+  use DBIx::FetchLoop;</PRE>
+<PRE>
+  $dbh = DBI-&gt;connect(...);
+  $sth = $dbh-&gt;prepare('select company, department, bank_account, balance from account_table&quot;);
+  $lph = DBIx::FetchLoop-&gt;new($sth,'fetchrow_hashref');</PRE>
+<PRE>
+  $lph-&gt;set_aggregate('department_rollup','balance');
+  $lph-&gt;set_aggregate('company_rollup','balance');</PRE>
+<PRE>
+  while (my $d = $lph-&gt;fetch_current_data) {</PRE>
+<PRE>
+    if ($lph-&gt;pre_loop('company')) {
+      print &quot;Company: &quot; . $d-&gt;{current}-&gt;{company} . &quot;\n&quot;;
+    }</PRE>
+<PRE>
+    if ($lph-&gt;pre_loop('department')) {
+      print &quot;Department: &quot; . $d-&gt;{current}-&gt;{department} . &quot;\n&quot;;
+    }</PRE>
+<PRE>
+    print &quot;Account: &quot; . $d-&gt;{current}-&gt;{bank_account} . &quot; : &quot; . $d-&gt;{current}-&gt;{balance} . &quot;\n&quot;;</PRE>
+<PRE>
+    if ($lph-&gt;post_loop('department')) {
+      print &quot;Department Balance: &quot; . $d-&gt;{current}-&gt;{department_rollup} . &quot;\n&quot;;
+      $lph-&gt;reset_aggregate('department_rollup');
+    }</PRE>
+<PRE>
+    if ($lph-&gt;post_loop('company')) {
+      print &quot;Company Balance: &quot; . $d-&gt;{current}-&gt;{company_rollup} . &quot;\n\n&quot;;
+      $lph-&gt;reset_aggregate('company_rollup');
+    }
+  }</PRE>
+<PRE>
+  $dbh-&gt;disconnect;</PRE>
+<P>
+<H2><A NAME="example 2 (fetchrow_arrayref):">Example 2 (fetchrow_arrayref):</A></H2>
+<PRE>
+  use DBI;
+  use DBIx::FetchLoop;</PRE>
+<PRE>
+  $dbh = DBI-&gt;connect(...);
+  $sth = $dbh-&gt;prepare('select company, department, bank_account, balance from account_table&quot;);
+  $lph = DBIx::FetchLoop-&gt;new($sth,'fetchrow_arrayref');</PRE>
+<PRE>
+  $lph-&gt;set_aggregate(4,3);
+  $lph-&gt;set_aggregate(5,3);</PRE>
+<PRE>
+  while (my $d = $lph-&gt;fetch_current_data) {
+</PRE>
+<PRE>
+
+    if ($lph-&gt;pre_loop(0)) {
+      print &quot;Company: &quot; . $d-&gt;{current}-&gt;[0] . &quot;\n&quot;;
+    }</PRE>
+<PRE>
+    if ($lph-&gt;pre_loop(1)) {
+      print &quot;Department: &quot; . $d-&gt;{current}-&gt;[1] . &quot;\n&quot;;
+    }</PRE>
+<PRE>
+    print &quot;Account: &quot; . $d-&gt;{current}-&gt;[2] . &quot; : &quot; . $d-&gt;{current}-&gt;[3] . &quot;\n&quot;;</PRE>
+<PRE>
+    if ($lph-&gt;post_loop(1)) {
+      print &quot;Department Balance: &quot; . $d-&gt;{current}-&gt;[4] . &quot;\n&quot;;
+      $lph-&gt;reset_aggregate(4);
+    }</PRE>
+<PRE>
+    if ($lph-&gt;post_loop(0)) {
+      print &quot;Company Balance: &quot; . $d-&gt;{current}-&gt;[5] . &quot;\n\n&quot;;
+      $lph-&gt;reset_aggregate(5);
+    }
+  }</PRE>
+<PRE>
+  $dbh-&gt;disconnect;</PRE>
+<P>
+<H2><A NAME="example 3 (concatenation, fetchrow_hashref and substring comparison)">Example 3 (concatenation, fetchrow_hashref and substring comparison)</A></H2>
+<PRE>
+  use DBI;
+  use DBIx::FetchLoop;</PRE>
+<PRE>
+  $dbh = DBI-&gt;connect(...);
+  $sth = $dbh-&gt;prepare('select news_group, message_header, message_part from news&quot;);
+  $lph = DBIx::FetchLoop-&gt;new($sth,'fetchrow_hashref');</PRE>
+<PRE>
+  $lph-&gt;set_concatenate('whole_message','message_part');</PRE>
+<PRE>
+  while (my $d = $lph-&gt;fetch_current_data) {</PRE>
+<PRE>
+    if ($lph-&gt;is_first) {
+      print &quot;News Viewing App\n&quot;;
+    }</PRE>
+<PRE>
+    if ($lph-&gt;pre_loop('news_group')) {
+      print &quot;Group: &quot; . $d-&gt;{current}-&gt;{news_group} . &quot;\n&quot;;
+    }</PRE>
+<PRE>
+    if ($lph-&gt;pre_loop_substr('message_header',4,10)) { 
+      print &quot;Title: &quot; . substr($d-&gt;{current}-&gt;{message_header},4,10) . &quot;\n&quot;;
+      print &quot;Author: &quot; . substr($d-&gt;{current}-&gt;{message_header},14,10) . &quot;\n&quot;;
+      print &quot;Result #&quot; . $lph-&gt;count . &quot;\n&quot;;
+    }</PRE>
+<PRE>
+    if (i$lph-&gt;post_loop_substr('message_header',4,10)) { 
+      print &quot;Message: \n&quot; . $d-&gt;{current}-&gt;{whole_message} . &quot;\n\n&quot;;
+      $lph-&gt;reset_concatenate('whole_message');
+    }</PRE>
+<PRE>
+    if ($lph-&gt;is_last) {
+      print &quot;All done\n&quot;;
+    }</PRE>
+<PRE>
+  }</PRE>
+<PRE>
+  $dbh-&gt;disconnect;</PRE>
+<P>
+<HR>
+<H1><A NAME="changes">CHANGES</A></H1>
+<P>Please see the CHANGES file in the module distribution.</P>
+<P>
+<HR>
+<H1><A NAME="todo">TO-DO</A></H1>
+<PRE>
+ - Spend more time on the documentation.</PRE>
+<PRE>
+ - More in-depth examples (with comments)</PRE>
+<P>
+<HR>
+<H1><A NAME="acknowledgements">ACKNOWLEDGEMENTS</A></H1>
+<P>Thanks to Tim Bunce for a lesson in the finer points of module naming.  :)</P>
+<P>Thanks to Ron M'Sadoques and Tom (d'Oh) Sullivan for listening to my ideas and constant promises to get around to writing this module.</P>
+<P>
+<HR>
+<H1><A NAME="author">AUTHOR</A></H1>
+<P>Brendan L. Fagan &lt;<A HREF="mailto:bits@csh.rit.edu">bits@csh.rit.edu</A>&gt;. Comments, bug reports, patches and flames are appreciated.</P>
+<P>
+<HR>
+<H1><A NAME="copyright">COPYRIGHT</A></H1>
+<P>Copyright (c) 2002 - Brendan L. Fagan</P>
 
 </BODY>
 
